--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{standalone}
+\documentclass[multi=step]{standalone}
 
 % The idea here, for now,
 % is to construct a framework flexible enough
@@ -31,73 +31,35 @@
   }
 }
 
-\input{palette}
-
 \tikzmath{
-  \ScreenWidth = 400;
-  \ScreenHeight = 300;
-  \TitleBarHeight = 35;
-  \TitleScale = 5.0;
-  \SubTitleScale = 3.5;
-  \PageNumScale = 2.0;
-  \ProgressHeight = 1.5;
-  \Progress = 1/3;
-  \CanvasMargin = 5;
   \eps = 0.1; % Useful to avoid seemingly pixel-rounding errors.
 }
 
-\newcommand{\TitleText}{Title}
-\newcommand{\SubTitleText}{Subtitle}
-\newcommand{\PageNumText}{99}
-
+\input{palette}
+\input{step}
 \input{files}
 \input{diff}
 \input{commits}
 
-\begin{document}
+\newcommand{\TitleText}{<no-title>}
+\newcommand{\SubTitleText}{<no-subtitle>}
+\newcommand{\PageNumText}{<no-page-number>}
+\newcommand{\Progress}{1/2}
 
+\begin{document}%
 
-\begin{tikzpicture}
+\renewcommand{\TitleText}{Title}
+\renewcommand{\SubTitleText}{Subtitle}
+\renewcommand{\PageNumText}{99}
+\renewcommand{\Progress}{1/3}
+\Step{
 
-  \pgfdeclarelayer{background}
-  \pgfsetlayers{background, main}
+}
 
-  % Set off global structure first.
-
-  % Whole screen, setting the page size.
-  \node[anchor=south west] (Screen) {\tikz{
-    \path (0, 0) rectangle (\ScreenWidth, \ScreenHeight)}};
-
-  % Title bar.
-  \node[anchor=north] (TitleBar) at (Screen.north) {\tikz{
-    \fill[Dark3] (0, 0) rectangle (\ScreenWidth, \TitleBarHeight);}};
-
-  % Title.
-  \node[Light2, anchor=base west, scale=\TitleScale,
-        right=10 of TitleBar.west] (Title) {\bf \TitleText};
-
-  % SubTitle.
-  \node[Light2, anchor=base east, scale=\SubTitleScale,
-        left=10 of TitleBar.east] (SubTitle) {\bf \SubTitleText};
-
-  % Page number.
-  \node[Dark4, inner sep=5, anchor=south east, scale=\PageNumScale]
-    (PageNum) at (Screen.south east) {\bf \PageNumText};
-
-  % Progress bar,
-  % fix vertical borders white pixel lines with epsilon shifts.
-  \coordinate (upper) at
-    ($(TitleBar.south east) + (-\eps, \ProgressHeight)$);
-  \coordinate[right=\eps of TitleBar.south west] (lower);
-  \fill[Yellow1] (lower) rectangle (upper);
-  \coordinate[left=(1-\Progress)*\ScreenWidth of upper] (upper);
-  \fill[Orange1] (lower) rectangle (upper);
-
-  % The "Canvas" refers to only the white area reserved for actual drawing,
-  % minus a short margin.
-  \coordinate (offset) at (\CanvasMargin, \CanvasMargin);
-  \node[anchor=south west] at (offset) (Canvas) {\tikz{
-    \path (offset) rectangle ($(TitleBar.south east) - (offset)$);}};
+\renewcommand{\SubTitleText}{NextSlide}
+\renewcommand{\PageNumText}{100}
+\renewcommand{\Progress}{2/3}
+\Step{
 
   \node[anchor=north west] (A) at (Canvas.north west) {\Folder};
   \Name[folder]{A}{folder\_name}
@@ -119,7 +81,7 @@
   }
 
   \coordinate (tp) at ($(Canvas.south)!.5!(Canvas.south west)$);
-  \Commits{$(tp) + (0, 15)$}{%
+  \Commits{$(tp) + (0, 15)$}{
     hash256/{Commit message.},
     dbc41a4/{Second commit.},
     9f1d6da/{Third commit with a longer message.},
@@ -129,8 +91,7 @@
   \Branch{0c4381c}{40:20}{-.5,0}{main}
   \Head{9f1d6da}{155:20}{.5,0}
 
-\end{tikzpicture}
-
+}
 
 \end{document}
 
