--- a/diff.tex
+++ b/diff.tex
@@ -6,7 +6,7 @@
   \FileNameMargins = 2;
   \CodeScale = 1.5;
   \CodeMargins = 2;
-  \CodeLineSpacing = 6;
+  \CodeLineSpacing = 5;
   \SignOffset = 3;
 }
 \colorlet{plus}{Green5}
@@ -56,55 +56,59 @@
 }}
 \newcommand{\Tilde}{\usebox{\TildeBox}}
 
-\NewDocumentCommand{\FileContent}{ O{0} m m m }{
+% [mode][anchor][name]{location}{name}{mod/lines}
+\NewDocumentCommand{\FileContent}{ O{0} O{center} O{file} m m m }{
   % Not exactly the corner we expect, but at least the one of first line.
-  \coordinate (line) at (#2);
-  \def\Sign{}
 
-  % Scope the lines to calculate their bounding box.
-  \begin{scope}[local bounding box=fileview,
-                every node/.style={scale=\CodeScale}]%
+  \node[anchor=#2] (#3) at (#4) {\tikz{
 
-    \foreach \sign/\line [count=\i] in {#4} {
-      % First line has special positionning.
-      \ifnumcomp{\i}{=}{1}{
-        \node[anchor=north west,\sign] (line-1) at (line) {\tt \line};
-      }{
-        \tikzmath{\prev = int(\i - 1);}
-        \node[below=\CodeLineSpacing of line-\prev.base west, \sign,
-              anchor=base west]
-          (line-\i) {\tt \line};
-      }
-    }
+    % Scope the lines to calculate their bounding box.
+      \begin{scope}[local bounding box=fileview,
+                    every node/.style={scale=\CodeScale}]
+
+        \foreach \sign/\line [count=\i] in {#6} {\ifcsempty{sign}{}{
+          % First line has special positionning.
+            \ifnumcomp{\i}{=}{1}{
+              \node[anchor=north west,\sign] (line-1) {\tt \line};
+            }{
+              \tikzmath{\prev = int(\i - 1);}
+              \node[below=\CodeLineSpacing of line-\prev.base west, \sign,
+                anchor=base west]
+                  (line-\i) {\tt \line};
+            }
+        }}
 
     % File background.
     \begin{pgfonlayer}{background}
     \draw[fill=Light2] ($(fileview.south west) - (\CodeMargins, \CodeMargins)$) rectangle
-                       ($(fileview.north east) + (\CodeMargins, \CodeMargins)$);
+      ($(fileview.north east) + (\CodeMargins, \CodeMargins)$);
     \end{pgfonlayer}
 
-  \end{scope}
+    \end{scope}
 
-  % Setup file name label.
-  \node[above=\FileNameMargins+\CodeMargins of line-1.north west,
-        scale=\FileNameScale, anchor=south west, #1]
-    (filename) {\tt #3};
-  \coordinate (pad) at (\FileNameMargins-\eps, \FileNameMargins);
-  \coordinate (lower) at ($(filename.south west) - (pad)$);
-  \coordinate (upper) at ($(filename.north east) + (pad)$);
-  \draw (lower) -- (lower |- upper) -- (upper) -- (upper |- lower);
-  \ifstrequal{#1}{0}{}{%
-    \node[anchor=base east] at ($(filename.base west) + (-\SignOffset, .5)$)
+    % Setup file name label.
+      \node[above=\FileNameMargins+\CodeMargins of line-1.north west,
+      scale=\FileNameScale, anchor=south west, #1]
+        (filename) {\tt #5};
+    \coordinate (pad) at (\FileNameMargins-\eps, \FileNameMargins);
+    \coordinate (lower) at ($(filename.south west) - (pad)$);
+    \coordinate (upper) at ($(filename.north east) + (pad)$);
+    \draw (lower) -- (lower |- upper) -- (upper) -- (upper |- lower);
+    \ifstrequal{#1}{0}{}{%
+      \node[anchor=base east] at ($(filename.base west) + (-\SignOffset, .5)$)
       {\ifstrequal{#1}{m}{\Tilde}{\ifstrequal{#1}{+}{\Plus}{\Minus}}};
-  }
+    }
 
-  % Second pass to append diff signs.
-  \foreach \sign/\line [count=\i] in {#4} {
-    \node[left=\SignOffset of line-\i.base west, anchor=base east]
-      {\ifdefstring{\sign}{m}{\Tilde}
-      {\ifdefstring{\sign}{+}{\Plus}
-      {\ifdefstring{\sign}{-}{\Minus}{}}}};
-  }
+    % Second pass to append diff signs.
+    \foreach \sign/\line [count=\i] in {#6} {\ifcsempty{sign}{}{
+      \node[left=\SignOffset of line-\i.base west, anchor=base east]
+        {\ifdefstring{\sign}{m}{\Tilde}
+        {\ifdefstring{\sign}{+}{\Plus}
+        {\ifdefstring{\sign}{-}{\Minus}{}}}};
+    }}
+
+  }};
+
 
 }
 
