--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 \input{step}
 \input{files}
 \input{diff}
-\input{commits}
+\input{repo}
 
 \newcommand{\TitleText}{<no-title>}
 \newcommand{\SubTitleText}{<no-subtitle>}
@@ -48,49 +48,86 @@
 
 \begin{document}%
 
-\renewcommand{\TitleText}{Title}
-\renewcommand{\SubTitleText}{Subtitle}
-\renewcommand{\PageNumText}{99}
+\renewcommand{\TitleText}{Introduction}
+\renewcommand{\SubTitleText}{Git and git clients}
+\renewcommand{\PageNumText}{1}
 \renewcommand{\Progress}{1/3}
 \Step{
 
 }
 
-\renewcommand{\SubTitleText}{NextSlide}
-\renewcommand{\PageNumText}{100}
+\renewcommand{\TitleText}{The Pizzas repo}
+\renewcommand{\SubTitleText}{Crafting your first commits}
+\renewcommand{\PageNumText}{2}
 \renewcommand{\Progress}{2/3}
 \Step{
 
-  \node[anchor=north west] (A) at (Canvas.north west) {\Folder[m]};
-  \NameFile[folder, mode=m]{A}{folder\_name}
-  \AppendSibling[file]{A}{B}{filename.ext}
-  \AppendSibling[folder]{B}{C}{container}
+  \node[anchor=north west] (A) at (Canvas.north west) {\Folder[0]};
+  \NameFile[folder, mode=0]{A}{pizzas}
+  \FirstChild[folder, mod=0]{A}{B}{.git}
+  \AppendSibling[file, mod=0, connect]{B}{C}{README.md}
+  \AppendSibling[file, mod=0, connect]{C}{D}{margherita.md}
+  \AppendSibling[file, mod=0, connect, last]{D}{E}{regina.md}
 
-  \FirstChild[file, mod=+]{C}{D}{contained.ext}
-  \AppendSibling[file, connect]{D}{E}{other.ext}
-  \AppendSibling[folder, connect, last, mod=-]{E}{F}{subcontainer}
-
-  \FirstChild[file, last, mod=-]{F}{G}{inner.ext}
-
-  \coordinate (top) at ($(Canvas.center)!.5!(Canvas.north)$);
-
-  \FileContent[+]{$(Canvas.center)!.5!(Canvas.north)$}{Filename.ext}{
-    +/{First line in the file, added style.},
-    0/{Second line, neutral style},
-    -/{Third line, removed style},
-    m/{Fourth line, modified style}
+  \def\FileSpacing{10}
+  \FileContent[0][north east][A]{Canvas.north east}{README.md}{
+    0/{Collect and distribute the best pizzas recipes.},
+    0/{},
+    0/{Where to find the pizza in the project:},
+    0/{},
+    0/{- \_\_Margherita\_\_: `./margherita.md`},
+    0/{- \_\_Regina\_\_: `./regina.md`},
   }
 
-  \coordinate (tp) at ($(Canvas.south)!.5!(Canvas.south west)$);
-  \Commits{$(tp) + (0, 15)$}{
-    hash256/{Commit message.},
-    dbc41a4/{Second commit.},
-    9f1d6da/{Third commit with a longer message.},
-    0c4381c/{Latest commit, with the branch and HEAD.}
+  \FileContent[0][north east][A]{$(A.south east) + (0, -\FileSpacing)$}
+  {margherita.md}{
+    0/{\# Margerita},
+    0/{},
+    0/{The simplest and most famous,},
+    0/{the one to pick when you're unsure},
+    0/{whether the cook is good.},
+    0/{},
+    0/{\_\_Base:\_\_ tomato sauce},
+    0/{\_\_Topping:\_\_},
+    0/{- Mozzarella},
+    0/{- Basil},
+    0/{},
+    0/{*Note:*},
+    0/{It is said that this pizza},
+    0/{has only three ingredients},
+    0/{corresponding to the three colors},
+    0/{on the Italian flag.},
+    0/{Nevertheless, it is always good},
+    0/{and *authorized* to add},
+    0/{olive oil, salt, or oregano.},
   }
 
-  \Branch{0c4381c}{40:20}{-.5,0}{main}
-  \Head{9f1d6da}{155:20}{.5,0}
+  \FileContent[0][north east]{$(A.south east) + (0, -\FileSpacing)$}
+  {regina.md}{
+    0/{\# Regina},
+    0/{},
+    0/{This audacious pizza},
+    0/{would be named from queen},
+    0/{Elena of Montenegro.},
+    0/{Created by pizzaiolo},
+    0/{Raffaele Esposito.},
+    0/{},
+    0/{\_\_Base:\_\_ tomato sauce  },
+    0/{\_\_Topping:\_\_},
+    0/{- Mozzarella},
+    0/{- Ham},
+    0/{- Mushrooms },
+  }
+
+  \Repo[south west]{Canvas.south west}{
+    01e8c8c/{First commit, the intent.},
+    4e29052/{First pizza: Margherita.},
+    45a5b65/{Add note to the Margherita.},
+    17514f2/{Add Regina. List pizzas in README.},
+  }
+
+  \Branch{17514f2}{40:20}{-.5,0}{main}
+  \Head{45a5b65}{155:20}{.5,0}
 
 }
 
