Move folder structure to python.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -66,11 +66,7 @@
 \renewcommand{\Progress}{2/3}
 \Step{
 
-  \FirstFile[folder, mod=0]{Canvas.north west}{A}{pizzas}
-  \FirstChild[folder, mod=0]{A}{B}{.git}
-  \AppendSibling[file, mod=0, connect]{B}{C}{README.md}
-  \AppendSibling[file, mod=0, connect]{C}{D}{margherita.md}
-  \AppendSibling[file, mod=0, connect, last]{D}{E}{regina.md}
+  \FirstFile[folder, mod=0]{Canvas.north west}{A}{rootfolder}
 
   \def\FileSpacing{10}
 
