Move diffs (and file contents) to python.

--- a/tex/diff.tex
+++ b/tex/diff.tex
@@ -57,7 +57,7 @@
 \newcommand{\Tilde}{\usebox{\TildeBox}}
 
 % [mode][anchor][name]{location}{name}{mod/lines}
-\NewDocumentCommand{\FileContent}{ O{0} O{center} O{file} m m m }{
+\NewDocumentCommand{\Diff}{ O{0} O{center} O{file} m m m }{
   % Not exactly the corner we expect, but at least the one of first line.
 
   \node[anchor=#2] (#3) at (#4) {\tikz{
