Move repo to python.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -80,13 +80,10 @@
   }
 
   \Repo[south west]{Canvas.south west}{
-    01e8c8c/{First commit, the intent.},
-    4e29052/{First pizza: Margherita.},
-    45a5b65/{Add note to the Margherita.},
-    17514f2/{Add Regina. List pizzas in README.},
-  }
-  \Branch{17514f2}{40:20}{-.5,0}{main}
-  \Head{45a5b65}{155:20}{.5,0}
+    hash256/{Commit message.},
+  }%
+  \Branch[Blue4]{hash256}{40:20}{-.5,0}{branch}
+  \Head{hash256}{155:20}{.5,0}
 
 } % ENDSLIDE
 
