--- a/tex/main.tex
+++ b/tex/main.tex
@@ -40,6 +40,7 @@
 \input{files}
 \input{diff}
 \input{repo}
+\input{command}
 
 \newcommand{\TitleText}{<no-title>}
 \newcommand{\SubTitleText}{<no-subtitle>}
@@ -84,6 +85,8 @@
   }%
   \Branch[Blue4]{hash256}{40:20}{-.5,0}{branch}
   \Head{hash256}{155:20}{.5,0}
+
+  \Command[base]{0, 0}{git init}
 
 } % ENDSLIDE
 
