Animate clients slide.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -56,7 +56,7 @@
 % so whitespace and comments are not always insignificant.
 % Just use it as a stub so python scripts can bootstrap and generate steps.
 
-% SLIDE Introduction
+% SLIDE Clients
 \renewcommand{\TitleText}{Introduction}
 \renewcommand{\SubTitleText}{Git and git clients}
 \renewcommand{\PageNumText}{1}
