Flesh up pizzas slide.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -103,7 +103,7 @@
       \draw (gitlab.north) .. controls +(0, 130) .. (git.south east);
     \end{scope}
 
-    \Highlight{git}
+    \HighlightShade{git}
 
   \end{scope}
 } % ENDSLIDE
@@ -117,7 +117,7 @@
 
   \FirstFile[folder, mod=0]{Canvas.north west}{A}{rootfolder}
 
-  \def\FileSpacing{10}
+  \def\FileSpacing{8}
   \Diff[m][north east][A]{Canvas.north east}{file.ext}{
     +/{One line},
   }
